# careguide-ai

./: .env.example  .gitignore  BOOK_INGESTION_PLAN.md  DATA_SOURCES.md  DEPLOYMENT.md  DESIGN.md  DESKTOP_APP_PLAN.md  INGESTION_PLAN.md  PRODUCT.md  README.md  package-lock.json  package.json
apps/desktop/: README.md  package.json
apps/desktop/src/: main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  package.json  tailwind.config.ts
apps/web/scripts/: check-env.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/consult/: page.tsx
apps/web/src/app/reminders/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/sources/: page.tsx
apps/web/src/components/landing/: HeroIllustration.tsx  LandingPage.tsx
apps/web/src/components/layout/: AppShell.tsx
apps/web/src/components/workbench/: AnswerStatusBanner.tsx  CareGuideWorkbench.tsx  DetectedContext.tsx  EmptyState.tsx  ErrorState.tsx  KbCoverageBar.tsx  KnowledgeSection.tsx  LoadingState.tsx  MedicationCard.tsx  MedicationDisplayCard.tsx  MedicationSection.tsx  PharmacistQuestions.tsx  PlainLanguageSummary.tsx  QuestionComposer.tsx  SafetyNoticeList.tsx  ScenarioGrid.tsx  SourceDrawer.tsx  SourceList.tsx  display-adapter.ts  types.ts  ui-copy.ts
apps/web/src/lib/: env.ts  public-env.ts
apps/web/supabase/: config.toml  seed.sql
apps/web/supabase/migrations/: 20260525143000_initial_careguide_schema.sql  20260526110000_book_metadata.sql
(+87 files in other folders)
